testing fix of grid layout issue on iOS devices

--- a/assets/css/index.css
+++ b/assets/css/index.css
@@ -188,7 +188,7 @@
 }
 
 .grid-item {
-  display: flex;
+  /* display: flex; */
   align-items: center;
   justify-content: center;
   height: auto;
